test/src/e2e_vm_tests/test_programs/should_fail/infinite_dependencies/src/main.sw
script;
// This tests importing other files.

mod a_dependency;
mod b_dependency;

fn main() -> bool {
  false
}
